code/kubes/radicale/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radicale
  namespace: radicale
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: radicale/basic-auth
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      proxy_set_header X-Remote-User $remote_user;
spec:
  tls:
  - hosts:
    - calendar.xinutec.org
    secretName: calendar-tls
  ingressClassName: nginx
  rules:
  - host: calendar.xinutec.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radicale
            port:
              number: 5232
